Bring in more h5bp code

--- a/layouts/partials/footer-scripts.html
+++ b/layouts/partials/footer-scripts.html
@@ -1,2 +1,4 @@
 
 <!-- Scripts added to the footer of all pages -->
+<script src="js/vendor/modernizr-3.6.0.min.js"></script>
+<script src="js/main.js"></script>
