--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html class="no-js" lang="{{ .Site.LanguageCode}}">
-  <head>
-    {{ partial "head-meta.html" . }}
-  </head>
-  <body>
-    <!--[if lte IE 9]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-    <![endif]-->
+<head>
+  {{ partial "head-meta.html" . }}
+</head>
+<body>
+<!--[if lte IE 9]>
+  <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+<![endif]-->
 
-    {{ partial "header.html" . }}
-    <div class="main-content">
-      <h1>Web Starter Hugo</h1>
-      <p>If you're seeing this file, that means you've successfully set up with Web Starter for Hugo, edit this in <code>src/layouts/index.html</code>.</p>
-      <p>An example content page: <a href="readme">Read me</a> (edit the file at: hugo/content/readme.md)</p>
-    </div>
+  {{ partial "header.html" . }}
 
+  <div class="main-content">
+    <h1>Hello world!</h1>
+    <h2>This is Pippy, a Hugo theme based on HTML5 Boilerplate.</h2>
+    <p>Edit this file in <code>themes/layouts/index.html</code>.</p>
+  </div>
 
-    {{ partial "footer.html" . }}
+  {{ partial "footer.html" . }}
 
-    {{ partial "footer-scripts.html" . }}
+  {{ partial "footer-scripts.html" . }}
 
-  </body>
+  {{ partial "google-analytics.html" . }}
+
+</body>
 </html>
