--- a/layouts/partials/head-meta.html
+++ b/layouts/partials/head-meta.html
@@ -2,9 +2,14 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{{ if .Title }}{{ .Title }} - {{ end }}{{ .Site.Title }}</title>
   <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <link rel="apple-touch-icon" href="{{ .Site.BaseURL }}apple-touch-icon.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <!-- Hugo-specific bits -->
   {{ if .RSSLink }}
