--- a/layouts/404.html
+++ b/layouts/404.html
@@ -9,6 +9,7 @@
     <![endif]-->
 
     {{ partial "header.html" . }}
+    
     <div class="main-content">
       <h1>Page Not Found</h1>
       <p>Sorry, but the page you were trying to view does not exist.</p>
@@ -17,6 +18,8 @@
     {{ partial "footer.html" . }}
 
     {{ partial "footer-scripts.html" . }}
+
+    {{ partial "google-analytics.html" . }}
 
   </body>
 </html>
