--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        {{- partial "head-meta.html" . -}}
-    </head>
-    <body>
-        {{- partial "header.html" . -}}
-        <div id="content">
-        {{- block "main" . }}{{- end }}
-        </div>
-        {{- partial "footer.html" . -}}
-        {{- partial "footer-scripts.html" . -}}
-    </body>
+<head>
+  {{- partial "head-meta.html" . -}}
+</head>
+<body>
+  {{- partial "browserupgrade.html" . -}}
+  {{- partial "header.html" . -}}
+  <div id="content">
+    {{- block "main" . }}{{- end }}
+  </div>
+  {{- partial "footer.html" . -}}
+  {{- partial "footer-scripts.html" . -}}
+  {{- partial "google-analytics.html" . -}}
+</body>
 </html>
