--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,9 +4,8 @@
     {{ partial "head-meta.html" . }}
   </head>
   <body>
-    <!--[if lte IE 9]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-    <![endif]-->
+
+  {{ partial "browserupgrade.html" . }}
 
   {{ partial "header.html" . }}
 
@@ -26,6 +25,8 @@
   {{ partial "footer.html" . }}
 
   {{ partial "footer-scripts.html" . }}
+
+  {{ partial "google-analytics.html" . }}
 
   </body>
 </html>
