--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,9 +4,8 @@
   {{ partial "head-meta.html" . }}
 </head>
 <body>
-<!--[if lte IE 9]>
-  <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-<![endif]-->
+
+  {{ partial "browserupgrade.html" . }}
 
   {{ partial "header.html" . }}
 
