--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -1,16 +1,22 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="{{ .Site.LanguageCode}}">
 <head>
   {{- partial "head-meta.html" . -}}
 </head>
 <body>
   {{- partial "browserupgrade.html" . -}}
+
   {{- partial "header.html" . -}}
+
   <div id="content">
     {{- block "main" . }}{{- end }}
   </div>
+
   {{- partial "footer.html" . -}}
+
   {{- partial "footer-scripts.html" . -}}
+
   {{- partial "google-analytics.html" . -}}
+  
 </body>
 </html>
