--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,24 +1,6 @@
-<!doctype html>
-<html class="no-js" lang="{{ .Site.LanguageCode}}">
-<head>
-  {{ partial "head-meta.html" . }}
-</head>
-<body>
-
-  {{ partial "browserupgrade.html" . }}
-
-  {{ partial "header.html" . }}
-
-  <div class="main-content">
-    <h1>Page Not Found</h1>
-    <p>Sorry, but the page you were trying to view does not exist.</p>
-  </div>
-
-  {{ partial "footer.html" . }}
-
-  {{ partial "footer-scripts.html" . }}
-
-  {{ partial "google-analytics.html" . }}
-
-</body>
-</html>
+{{ define "main" }}
+<div class="main-content">
+  <h1>Page Not Found</h1>
+  <p>Sorry, but the page you were trying to view does not exist.</p>
+</div>
+{{ end }}
