--- a/layouts/partials/head-meta.html
+++ b/layouts/partials/head-meta.html
@@ -8,8 +8,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  {{ $postcssed := resources.Get "css/main.css" | postCSS | minify | fingerprint }}
+<link rel="stylesheet" href="{{ $postcssed.Permalink }}">
 
   <!-- Hugo-specific bits -->
   {{ if .RSSLink }}
