--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,9 @@
 
   {{- partial "footer-scripts.html" . -}}
 
-  {{- partial "google-analytics.html" . -}}
+  {{ if ( isset .Site.Params "googleanalytics" ) }}
+    {{- partial "google-analytics.html" . -}}
+  {{ end }}
 
 </body>
 </html>
