--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,27 +1,19 @@
-<!doctype html>
-<html class="no-js" lang="{{ .Site.LanguageCode}}">
-<head>
-  {{- partial "head-meta.html" . -}}
-</head>
-<body>
 
-  {{- partial "browserupgrade.html" . -}}
+{{ define "main" }}
+<div class="main-content">
+  <h2>Hello world!</h2>
+  <i>This is Pippy, a Hugo theme based on HTML5 Boilerplate.</i>
 
-  {{- partial "header.html" . -}}
+  <p>Edit this file in <code>themes/THEME-NAME/layouts/index.html</code></p>
 
-  <div class="main-content">
-    <h1>Hello world!</h1>
-    <h2>This is Pippy, a Hugo theme based on HTML5 Boilerplate.</h2>
-    <p>Edit this file in <code>themes/layouts/index.html</code>.</p>
-  </div>
-
-  {{- partial "footer.html" . -}}
-
-  {{- partial "footer-scripts.html" . -}}
-
-  {{ if ( isset .Site.Params "googleanalytics" ) }}
-    {{- partial "google-analytics.html" . -}}
+  <!-- Uncomment the code below to pull content from a content/_index.md -->
+  <!--
+  <h1>{{.Title}}</h1>
+  {{ with .Params.subtitle }}
+  <span class="subtitle">{{.}}</span>
   {{ end }}
+  {{.Content}}
+  -->
 
-</body>
-</html>
+</div>
+{{ end }}
