Switch to Hugo internal async Google Analytics Template

--- a/layouts/partials/head-meta.html
+++ b/layouts/partials/head-meta.html
@@ -8,6 +8,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
+  {{ template "_internal/google_analytics_async.html" . }}
+
   {{ $postcssed := resources.Get "css/main.css" | postCSS | minify | fingerprint }}
   <link rel="stylesheet" href="{{ $postcssed.Permalink }}">
 
